--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,42 +4,63 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>demo.tests.scp.PaymentInfoTests</td>
+<td>demo.tests.scp.LoginTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddingBankPaymentProfile</td>
+<td>verifyLoginWithClosedAccounts</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyMultipleBankPaymentProfileAndDeletion</td>
+<td>verifyLoginForMigratedUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCreditCardPaymentFormFields</td>
+<td>verifyLoginWithDeactiveUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyMakePaymentWithNewCC</td>
+<td>verifyLoginPageObjects</td>
+<td>sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUsernamePasswordAcceptanceCriteria</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyBankPaymentFormFields</td>
+<td>verifyEfficiencyWidgetsProgram</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyBankPaymentFormFieldsValidation</td>
+<td>verifyInvalidLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCeditCardPaymentFormFieldsValidation</td>
+<td>verifySwitchLanguageFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPaymentInformationPageObjects</td>
+<td>verifyAccountBlockOnLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyChatWindow</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyValidLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyIPBlockOnLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRememberMeLoginFunctionality</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
