--- a/test-output/old/Test Execution/methods-not-run.html
+++ b/test-output/old/Test Execution/methods-not-run.html
@@ -1,17 +1,11 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
-<tr><td>sew.ai.runner.TestRunner.testPreRequisites</td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyRememberMeLoginFunctionality<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>To verify the remember me login functionality.</i></td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyValidLogin<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>User is able to Login with valid credentials.</i></td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyInvalidLogin<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>To verify the login functionality with invalid credentials.</i></td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyInvalidPaymentDetails<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>To verify the payment functionality with invalid details.</i></td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyPreLogChatBox<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>To verify chat functionality.</i></td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyPreLogTrackContactReq<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>To verify the Pre-Login Connect Me page.</i></td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyPreLogTrackContactReqForWaterWaste<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Verify User is able to Submit a Contact Us Request form for Water waste, theft without logging in.</i></td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyWaysToSavePage<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>To verify the ways to save page.</i></td></tr>
+<tr><td>demo.tests.scp.PreLoginTests.verifyPreLogPaymentLocations<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>To verify the Pre-Login Payment Locations page.</i></td></tr>
 </table>
