--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f06693">  <td>24/01/30 17:29:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.testPreRequisites(java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.PaymentInfoTests@41394595]">&gt;&gt;testPreRequisites</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@710220387</td>   <td></td> </tr>
+<tr bgcolor="dbbdf9">  <td>24/06/03 15:26:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.testPreRequisites(java.lang.String,java.lang.String)[pri:0, instance:demo.tests.scp.LoginTests@7bc10d84]">&gt;&gt;testPreRequisites</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@798154996</td>   <td></td> </tr>
 </table>
